Deploy the rancher aks cluster into an existing virtual network.

--- a/internal-load-balancer.yml
+++ b/internal-load-balancer.yml
@@ -2,3 +2,4 @@ controller:
   service:
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+      service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "rancher-subnet"
